--- a/index.html
+++ b/index.html
@@ -598,17 +598,17 @@
 				</div>
 				<div class="modal-body">
 					<div class="container-fluid">
-						<h2>Schedule <span class="color">Auto Service</span></h2>
-						<p>To schedule an appointment with your friendly neighborhood experts at Car Repair Services, give us a call at 1-800-123-4567 or fill out the form below with your information and requested services. One of our team members will get back to you as soon as possible to confirm your appointment. </p>
+						<h2><span class="color"></span></h2>
+						<p>La mejor institución educativa</p>
 						<div class="divider"></div>
 						<form id="appointment-form" class="contact-form form-horizontal" name="contactform" method="post">
 							<div id="successAppointment" class="successform">
-								<p>Your message was sent successfully!</p>
+								<p></p>
 							</div>
 							<div id="errorAppointment" class="errorform">
-								<p>Something went wrong, try refreshing and submitting the form again.</p>
+								<p></p>
 							</div>
-							<h5>Contact information</h5>
+							<h5></h5>
 							<div class="form-inline">
 								<div>
 									<input type="text" name="name" class="form-control input-custom" value="" placeholder="First name">
