--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 	<div class="modal fade" id="appointmentForm">
 		<div class="modal-dialog container">
 			<div class="modal-content">
-				<div class="modal-header"><a href="#" class="appointment" data-toggle="modal" data-target="#appointmentForm"><i class="icon-shape icon"></i><span>Appointment</span></a>
+				<div class="modal-header"><a href="#" class="appointment" data-toggle="modal" data-target="#appointmentForm"><i class="icon-shape icon"></i><span></span></a>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="icon-close-cross"></i></button>
 				</div>
 				<div class="modal-body">
@@ -626,7 +626,7 @@
 								</div>
 							</div>
 							<div class="divider"></div>
-							<h5>Appointment details</h5>
+							<h5></h5>
 							<div class="form-inline">
 								<div class="datetimepicker-wrap">
 									<input type="text" name="date" class="form-control input-custom datetimepicker" placeholder="">
