--- a/index.html
+++ b/index.html
@@ -327,10 +327,10 @@
 									<div class="form-popup">
 										<form id="quote-form" method="post">
 											<div id="successQuote" class="successform">
-												<p>Your message was sent successfully!</p>
+												<p></p>
 											</div>
 											<div id="errorQuote" class="errorform">
-												<p>Something went wrong, try refreshing and submitting the form again.</p>
+												<p></p>
 											</div>
 											<div class="form-inline">
 												<input type="text" name="name" class="form-control input-custom" value="" placeholder="Your Name">
@@ -346,9 +346,9 @@
 											<div class="form-inline">
 												<div class="select-wrapper">
 													<select name="select1" class="input-custom">
-														<option value="Vehicle">Vehicle</option>
-														<option value="Car">Car</option>
-														<option value="Bike">Bike</option>
+														<option value="Vehicle"></option>
+														<option value="Car"></option>
+														<option value="Bike"></option>
 													</select>
 												</div>
 												<div class="select-wrapper">
@@ -370,17 +370,17 @@
 											<div class="form-inline">
 												<div class="select-wrapper">
 													<select name="select3" class="input-custom">
-														<option value="">Choose service</option>
-														<option value="Preventative Maintenance">Preventative Maintenance</option>
-														<option value="Brake Repair">Brake Repair & Service</option>
-														<option value="Transmission Service">Transmission Service & Repair</option>
+														<option value=""></option>
+														<option value="Preventative Maintenance"></option>
+														<option value="Brake Repair"></option>
+														<option value="Transmission Service"></option>
 													</select>
 												</div>
 											</div>
 											<div class="form-inline">
 												<textarea name="message" class="form-control textarea-custom" placeholder="Your comment"></textarea>
 											</div>
-											<button type="submit" id="submit" class="btn btn-lg btn-full"><span>get a quote</span></button>
+											<button type="submit" id="submit" class="btn btn-lg btn-full"><span></span></button>
 										</form>
 									</div>
 								</div>
@@ -440,20 +440,12 @@
 				<div class="modal-header">
 					<div class="row">
 						<div class="col-xs-9">
-							<h3>The Tires Price</h3>
+							<h3></h3>
 						</div>
 						<div class="col-xs-3">
 							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="icon-close-cross"></i></button>
 						</div>
 					</div>
-				</div>
-				<div class="modal-body">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae in, perspiciatis iusto rerum non temporibus tenetur.
-					<ul class="marker-list-sm marker-list-italic">
-						<li><b>Price:</b> $49.95</li>
-						<li><b>Your discount:</b> -20%</li>
-						<li><b>Total Price:</b> $39.95</li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -466,20 +458,12 @@
 				<div class="modal-header">
 					<div class="row">
 						<div class="col-xs-9">
-							<h3>Oil Change Price</h3>
+							<h3></h3>
 						</div>
 						<div class="col-xs-3">
 							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="icon-close-cross"></i></button>
 						</div>
 					</div>
-				</div>
-				<div class="modal-body">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae in, perspiciatis iusto rerum non temporibus tenetur.
-					<ul class="marker-list-sm marker-list-italic">
-						<li><b>Price:</b> $49.95</li>
-						<li><b>Your discount:</b> -20%</li>
-						<li><b>Total Price:</b> $39.95</li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -570,7 +554,7 @@
 				<div class="modal-header">
 					<div class="row">
 						<div class="col-xs-9">
-							<h3>Recalls, Investigations & Complaints</h3>
+							<h3></h3>
 						</div>
 						<div class="col-xs-3">
 							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="icon-close-cross"></i></button>
@@ -666,11 +650,11 @@
 							<div class="divider"></div>
 							<div class="row">
 								<div class="col-sm-4 col-md-3 bootstrap-datetimepicker-widget">
-									<button type="submit" id="submit" class="btn btn-lg"><span>SUBMIT</span></button>
+									<button type="submit" id="submit" class="btn btn-lg"><span></span></button>
 								</div>
 								<div class="divider visible-xs"></div>
 								<div class="col-sm-8 col-md-9">
-									<p><i>Please note that the date and time you requested may not be available. We will contact you to confirm your actual appointment details.</i></p>
+									<p><i></i></p>
 								</div>
 							</div>
 						</form>
