--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 						<a href="cuadra-9.html" class="image image-scale"><img src="images/service-4-bg.jpg" alt="#"></a>
 					</div>
 					<div class="service dark">
-						<div class="image"><img src="images/service-5-bg.jpg" alt="#"></div>
+						<div class="image"><img src="images/service-5-bg.png" alt="#"></div>
 						<div class="caption">
 							<div class="vert-wrap">
 								<div class="vert">
