--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 						<a href="cuadra-15.html" class="image image-scale"><img src="images/service-2-bg.jpg" alt="#"></a>
 					</div>
 					<div class="service">
-						<div class="image"><img src="images/service-3-bg.jpg" alt="#"></div>
+						<div class="image"><img src="images/service-3-bg.png" alt="#"></div>
 						<div class="caption">
 							<div class="vert-wrap">
 								<div class="vert">
