--- a/Ventas.html
+++ b/Ventas.html
@@ -282,7 +282,7 @@
 				<div class="modal-body">
 					<div class="container-fluid">
 						<h2>Schedule <span class="color">Auto Service</span></h2>
-						<p>To schedule an appointment with your friendly neighborhood experts at Car Repair Services, give us a call at 1-800-123-4567 or fill out the form below with your information and requested services. One of our team members will get back to you as soon as possible to confirm your appointment. </p>
+						<p>La mejor institución educativa</p>
 						<div class="divider"></div>
 						<form id="appointment-form" class="contact-form form-horizontal" name="contactform" method="post">
 							<div id="successAppointment" class="successform">
