--- a/about.html
+++ b/about.html
@@ -78,12 +78,12 @@
 							<div class="close-menu"><i class="icon-close-cross"></i></div>
 							<ul class="nav navbar-nav">
 								<li><a href="index.html"><span>Inicio</span></a></li>
-								<li class="active"><a href="about.html"><span>Nosotros</span></a></li>
+								<li class="active"><a href="Nosotros.html"><span>Nosotros</span></a></li>
 								<li class="dropdown">
-									<a href="services.html" data-toggle="dropdown" data-submenu=""><span>Talleres</span><span class="ecaret"></span></a>
-								<li><a href="gallery.html"><span>Galeria</span></a></li>
-								<li><a href="testimonials.html"><span>Testimonio</span></a></li>								
-								<li><a href="shop.html"><span>Ventas</span></a></li>
+									<a href="Talleres.html" data-toggle="dropdown" data-submenu=""><span>Talleres</span><span class="ecaret"></span></a>
+								<li><a href="Eventos.html"><span>Eventos</span></a></li>
+								<li><a href="testimonio.html"><span>Testimonio</span></a></li>								
+								<li><a href="Ventas.html"><span>Ventas</span></a></li>
 							</ul>
 						</div>
 						<div class="col-md-1">
@@ -284,7 +284,7 @@
 				<div class="modal-body">
 					<div class="container-fluid">
 						<h2>Schedule <span class="color">Auto Service</span></h2>
-						<p>To schedule an appointment with your friendly neighborhood experts at Car Repair Services, give us a call at 1-800-123-4567 or fill out the form below with your information and requested services. One of our team members will get back to you as soon as possible to confirm your appointment. </p>
+						<p></p>
 						<div class="divider"></div>
 						<form id="appointment-form" class="contact-form form-horizontal" name="contactform" method="post">
 							<div id="successAppointment" class="successform">
