--- a/Talleres.html
+++ b/Talleres.html
@@ -218,13 +218,13 @@
 	<div class="modal fade" id="appointmentForm">
 		<div class="modal-dialog container">
 			<div class="modal-content">
-				<div class="modal-header"><a href="#" class="appointment" data-toggle="modal" data-target="#appointmentForm"><i class="icon-shape icon"></i><span>Appointment</span></a>
+				<div class="modal-header"><a href="#" class="appointment" data-toggle="modal" data-target="#appointmentForm"><i class="icon-shape icon"></i><span></span></a>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="icon-close-cross"></i></button>
 				</div>
 				<div class="modal-body">
 					<div class="container-fluid">
-						<h2>Schedule <span class="color">Auto Service</span></h2>
-						<p>To schedule an appointment with your friendly neighborhood experts at Car Repair Services, give us a call at 1-800-123-4567 or fill out the form below with your information and requested services. One of our team members will get back to you as soon as possible to confirm your appointment. </p>
+						<h2><span class="color"></span></h2>
+						<p>La mejor institución educativa</p>
 						<div class="divider"></div>
 						<form id="appointment-form" class="contact-form form-horizontal" name="contactform" method="post">
 							<div id="successAppointment" class="successform">
