--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								</li>
 								<li><a href="Eventos.html"><span>Eventos</span></a></li>
 								<li><a href="Testimonio.html"><span>Testimonio</span></a></li>
-								<li><a href="Eventos.html"><span>Ventas</span></a></li>
+								<li><a href="Ventas.html"><span>Ventas</span></a></li>
 							</ul>
 						</div>
 					</div>
