--- a/Nosotros.html
+++ b/Nosotros.html
@@ -187,7 +187,7 @@
 						<div class="testimonial-card-text">Los valores de responsabilidad, respeto y honestidad que están inmersos en todas estas acciones acordadas por el Personal Docente y Administrativo del Colegio Johannes Kepler con seis principios que son parte del ser y el hacer de todos sus actores. </div>
 					</div>
 				</div>
-				<div class="text-center"><a href="#slideMobile" class="view-more-link color"><span class="more">All Services</span><span class="less">Hide All Services</span></a>
+				<div class="text-center"><a href="#slideMobile" class="view-more-link color"><span class="more">Mostrar Más</span><span class="less"></span></a>
 				</div>
 			</div>
 		</div>
