--- a/Convenios.html
+++ b/Convenios.html
@@ -15,6 +15,7 @@
 	<link href="css/plugins/bootstrap-submenu.css" rel="stylesheet">
 	<link href="css/plugins/animate.min.css" rel="stylesheet">
 	<link href="css/plugins/slick.css" rel="stylesheet">
+	<link href="css/plugins/magnific-popup.css" rel="stylesheet">
 	<link href="css/plugins/bootstrap-datetimepicker.css" rel="stylesheet">
 	<link href="css/custom.css" rel="stylesheet">
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -80,9 +81,9 @@
 									<a href="Talleres.html" data-toggle="dropdown" data-submenu=""><span>Talleres</span><span class="ecaret"></span></a>
 								</li>
 								<li><a href="Eventos.html"><span>Eventos</span></a></li>
-								<li class="active"><a href="Testimonio.html"><span>Testimonio</span></a></li>
-								<li><a href="Ventas.html"><span>Ventas</span></a></li>
-								<li><a href="Convenios.html"><span>Convenios</span></a></li>
+								<li><a href="Testimonio.html"><span>Testimonio</span></a></li>
+								<li><a href="Ventas.html"><span>Ventas</span></a></li>								
+								<li class="active"><a href="Convenios.html"><span>Convenios</span></a></li>
 							</ul>
 						</div>
 						<div class="col-md-1">
@@ -100,7 +101,7 @@
 			<div class="breadcrumbs">
 				<ul class="breadcrumb">
 					<li><a href="index.html">Inicio</a></li>
-					<li>Testimonio</li>
+					<li>Convenios</li>
 				</ul>
 			</div>
 			<!-- //Breadcrumbs Block -->
@@ -108,39 +109,34 @@
 		</div>
 	</div>
 	<div id="pageContent">
+		<!-- Block -->
 		<div class="block">
-			<h2 class="text-center h-bg">Nuestros Testimonios</h2>
-			<p class="info text-center">"Grandes y sabias palabras de nuestro promoteres"</p>
 			<div class="container">
-				<div class="blog-isotope">
-					<div class="testimonial-card">
-						<div class="testimonial-card-title">
-							<h5>William N. Argo</h5></div>
-						<div class="testimonial-card-text">Yesterday's crown preparation went great. I expected the same level of discomfort that I had experienced with another crown done by different dentist. Technique caused so much less difficulty that I went away with a smile on my face. </div>
-						<div class="testimonial-card-rating">
-							<div class="rating rating-5"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></div>
-						</div>
-					</div>
-					<div class="testimonial-card">
-						<div class="testimonial-card-title">
-							<h5>Jana G. Thomas</h5></div>
-						<div class="testimonial-card-text">Whitney showed up today early, not on time, but early, which was awesome, and took care of everything. Got the oil filter changed. Also, he found some other things that were possibly needing a little attention from him. It was a great service all around and we'll be calling him again, again, and again.</div>
-						<div class="testimonial-card-rating">
-							<div class="rating rating-5"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></div>
-						</div>
-					</div>
-					<div class="testimonial-card">
-						<div class="testimonial-card-title">
-							<h5>Travis E. Corlett</h5></div>
-						<div class="testimonial-card-text">I learned of Car Repair Service through a local news station. The service provided by Kevin exceeded my expectations. Not only does he come highly recommended but I plan to request him for future service needs.</div>
-						<div class="testimonial-card-rating">
-							<div class="rating rating-5"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></div>
+				<!-- Filters -->				
+				<div class="text-center">
+					<br><br><h2 class="h-lg">Unos de nuestros grandes convenios</h2>
+					<p class="info">"JOHANNES KEPLER"</p>
+				</div>
+				<!-- //end Filters -->
+				<div class="gallery gallery-isotope" id="gallery">
+					<div class="gallery-item category3">
+						<div class="gallery-item-image">
+							<img src="images/gallery/gallery-img-01.png" alt="" />
+							<a class="hover" href="images/gallery/gallery-img-01.png">
+								<span class="view">
+								<span class="icon icon-search"></span>
+								</span>
+								<span class="tags">
+								<span class="pull-left">ACADEMIA SANTOS FUTBOL CLUB</span>
+								<span class="pull-right"><i class="icon icon-favorite"></i></span>
+								</span>
+							</a>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+		<!-- //Block -->
 	<!-- // Content  -->
 	<!-- Footer -->
 	<div class="page-footer">
@@ -159,6 +155,7 @@
 						<ul>
 							<li>
 								<a class="icon icon-facebook-logo" href="https://www.facebook.com/johanneskepleroficial/"></a>
+							</li>
 							</li>
 						</ul>
 					</div>
@@ -180,12 +177,12 @@
 	<div class="modal fade" id="appointmentForm">
 		<div class="modal-dialog container">
 			<div class="modal-content">
-				<div class="modal-header"><a href="#" class="appointment" data-toggle="modal" data-target="#appointmentForm"><i class="icon-shape icon"></i><span></span></a>
+				<div class="modal-header"><a href="#" class="appointment" data-toggle="modal" data-target="#appointmentForm"><i class="icon-shape icon"></i><span>Appointment</span></a>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="icon-close-cross"></i></button>
 				</div>
 				<div class="modal-body">
 					<div class="container-fluid">
-						<h2><span class="color"></span></h2>
+						<h2>Schedule <span class="color">Auto Service</span></h2>
 						<p>La mejor institución educativa</p>
 						<div class="divider"></div>
 						<form id="appointment-form" class="contact-form form-horizontal" name="contactform" method="post">
