--- a/Ventas.html
+++ b/Ventas.html
@@ -83,6 +83,7 @@
 								<li><a href="Eventos.html"><span>Eventos</span></a></li>
 								<li><a href="Testimonio.html"><span>Testimonio</span></a></li>
 								<li class="active"><a href="Ventas.html"><span>Ventas</span></a></li>
+								<li><a href="Convenios.html"><span>Convenios</span></a></li>
 							</ul>
 						</div>
 						<div class="col-md-1">
