--- a/Eventos.html
+++ b/Eventos.html
@@ -83,6 +83,7 @@
 								<li class="active"><a href="Eventos.html"><span>Eventos</span></a></li>
 								<li><a href="Testimonio.html"><span>Testimonio</span></a></li>
 								<li><a href="Ventas.html"><span>Ventas</span></a></li>
+								<li><a href="Convenios.html"><span>Convenios</span></a></li>
 							</ul>
 						</div>
 						<div class="col-md-1">
@@ -254,7 +255,6 @@
 			</div>
 		</div>
 		<!-- //Block -->
-	</div>
 	<!-- // Content  -->
 	<!-- Footer -->
 	<div class="page-footer">
