--- a/Talleres.html
+++ b/Talleres.html
@@ -82,6 +82,7 @@
 								<li><a href="Eventos.html"><span>Eventos</span></a></li>
 								<li><a href="Testimonio.html"><span>Testimonio</span></a></li>
 								<li><a href="Ventas.html"><span>Ventas</span></a></li>
+								<li><a href="Convenios.html"><span>Convenios</span></a></li>
 							</ul>
 						</div>
 					</div>
