--- a/Convenios.html
+++ b/Convenios.html
@@ -133,6 +133,34 @@
 							</a>
 						</div>
 					</div>
+					<div class="gallery-item category3">
+						<div class="gallery-item-image">
+							<img src="images/gallery/gallery-img-02.png" alt="" />
+							<a class="hover" href="images/gallery/gallery-img-02.png">
+								<span class="view">
+								<span class="icon icon-search"></span>
+								</span>
+								<span class="tags">
+								<span class="pull-left">ACADEMIA SANTOS FUTBOL CLUB</span>
+								<span class="pull-right"><i class="icon icon-favorite"></i></span>
+								</span>
+							</a>
+						</div>
+					</div>
+					<div class="gallery-item category3">
+						<div class="gallery-item-image">
+							<img src="images/gallery/gallery-img-03.png" alt="" />
+							<a class="hover" href="images/gallery/gallery-img-03.png">
+								<span class="view">
+								<span class="icon icon-search"></span>
+								</span>
+								<span class="tags">
+								<span class="pull-left">ACADEMIA SANTOS FUTBOL CLUB</span>
+								<span class="pull-right"><i class="icon icon-favorite"></i></span>
+								</span>
+							</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
