--- a/Eventos.html
+++ b/Eventos.html
@@ -285,7 +285,7 @@
 		</div>
 		<div class="footer-bottom">
 			<div class="container">
-				<div class="copyright">© 2017 I.E.P Johannes Kepler, Todos los derechos reservados</div>
+				<center><div class="copyright">Diseñado por Enrique Berrospi</div></center>
 			</div>
 		</div>
 	</div>
